# oop-project

./: CMakeLists.txt  Makefile  README.md  main
docs/: Subject-HW_Simulator.drawio
include/: CMakeLists.txt  bus.hpp  component.hpp  cpu.hpp  display.hpp  formating.hpp  memory.hpp  parse.hpp  platform.hpp  queue.hpp
source/: CMakeLists.txt  basedata.hpp  bus.cpp  bus.hpp  component.cpp  component.hpp  cpu.cpp  cpu.hpp  datavalue.hpp  display.cpp  display.hpp  main.cpp  main.hpp  memory.cpp  memory.hpp  parse.cpp  parse.hpp  platform.cpp  platform.hpp  queue.cpp  queue.hpp
test/unit/: parseTest.cpp
tests/: CMakeLists.txt  CPUTest.cpp  busTest.cpp  displayTest.cpp  memoryTest.cpp  parseTest.cpp  platformTest.cpp  queueTest.cpp
tests/data/: platform.txt
